<resources>
    <string name="app_name">Connex.us</string>
    <string name="main_to_view">Go to view stream</string>
    <string name="main_hint">Enter name</string>
    <string name="title">Connexus</string>
    <string name="view_one_stream_line">View A Stream: </string>
    <string name="view_one_stream_more_pic">More Picture</string>
    <string name="view_one_stream_upload">Upload an Image</string>
    <string name="view_one_stream_streams">Streams</string>
    <string name="view_one_more_pictures">More Pictures</string>
    <string name="view_all_search_hint">Search Streams</string>
    <string name="view_all_search_btn">Search</string>
    <string name="view_all_sub_streams">My Subscribed Streams</string>
    <string name="view_all_earch_icon">Earth icon link to view nearby stream</string>
    <string name="view_nearby_text">Nearby pictures</string>
    <string name="view_nearby_more">More</string>
    <string name="view_nearby_all_stream">View All Streams</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="use_camera_btn">Use Camera</string>
    <string name="upload_btn">Upload</string>
    <string name="image_comment_hint">Type comment about this photo here</string>
    <string name="new_photo_btn">Take a new photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capture_button">Capture Image</string>
    <string name="desc">capture image place holder</string>
    <!-- UI Elements -->
    <string name="btn_capture">Click</string>
    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="go_to_upload">Upload photo</string>

    <string name="facebook_app_id">330584184081032</string>
    <string name="fb_login_protocol_scheme">fb330584184081032</string>
</resources>
