<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ee382v.sparrow.ee382v_sparrow_mini_phase3.ViewAllStream">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_alignBottom="@+id/viewAllCanvas"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/viewAllSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/view_all_search_hint"
            android:inputType="textShortMessage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewAllSearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.58"
                android:onClick="goToSearchPage"
                android:text="@string/view_all_search_btn" />

            <ImageButton
                android:id="@+id/viewAllNearby"
                android:layout_width="51dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/view_all_earch_icon"
                android:onClick="goToNearbyStreams"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/earth" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nearby Stream" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/viewAllSubStreams"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="toToSubstribed"
        android:text="@string/view_all_sub_streams" />

    <GridView
        android:id="@+id/viewAllCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewAllSubStreams"
        android:layout_marginTop="20dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:visibility="visible">

    </GridView>

</LinearLayout>

