<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ee382v.sparrow.ee382v_sparrow_mini_phase3.MainActivity">

    <Button
        android:id="@+id/selectFromGalleryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="selectFromGallery"
        android:text="@string/select_from_gallery"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/useCameraBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/useCameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="goToCamera"
        android:text="@string/use_camera_btn"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/photoPreview" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/upload_btn"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="49dp"
        android:ems="10"
        android:hint="@string/image_comment_hint"
        android:inputType="textShortMessage"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/uploadBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:background="@android:drawable/editbox_dropdown_light_frame" />

    <ImageView
        android:id="@+id/photoPreview"
        android:layout_width="278dp"
        android:layout_height="192dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginLeft="57dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/commentBox" />

</android.support.constraint.ConstraintLayout>
