<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ee382v.sparrow.ee382v_sparrow_mini_phase3.ViewOneStream">

    <GridView
        android:id="@+id/viewNearbyCanvas"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:visibility="visible"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </GridView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewNearbyCanvas"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/viewNearbyText"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/view_nearby_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/viewNearbyMoreBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:onClick="more"
            android:text="@string/view_nearby_more"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/viewNearbyAllStreambtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="viewAllStreams"
        android:text="@string/view_nearby_all_stream"
        android:textSize="18sp" />


</android.widget.RelativeLayout>